<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    tools:context=".MainMenuActivity">

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/public_sans_bold"
        android:text="@string/logo"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/grayCard1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="23dp"
        android:layout_marginTop="35dp"
        android:paddingTop="15dp"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        android:background="@drawable/round_back_gray_20">

        <TextView
            android:id="@+id/h1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/public_sans_bold"
            android:text="@string/chooseACity"
            android:textColor="@color/white"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/public_sans_extralight"
            android:text="@string/chooseACityInfo"
            android:textColor="@color/white"
            android:textSize="18sp"/>

    </LinearLayout>


    <ImageView
        android:id="@+id/soulCard"
        android:layout_width="169sp"
        android:layout_height="230sp"
        android:layout_marginStart="23sp"
        android:layout_marginTop="25sp"
        android:src="@drawable/soul_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grayCard1"
        android:contentDescription="@string/soul" />

    <ImageView
        android:id="@+id/busanCard"
        android:layout_width="169sp"
        android:layout_height="230sp"
        android:layout_marginTop="25sp"
        android:layout_marginEnd="23sp"
        android:src="@drawable/busan_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grayCard1"
        android:contentDescription="@string/busan" />

    <ImageView
        android:id="@+id/chejuCard"
        android:layout_width="169sp"
        android:layout_height="230sp"
        android:layout_marginStart="23sp"
        android:layout_marginTop="25sp"
        android:src="@drawable/cheju_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/soulCard"
        android:contentDescription="@string/cheju" />

    <ImageView
        android:id="@+id/soonCard"
        android:layout_width="169sp"
        android:layout_height="230sp"
        android:layout_marginTop="25sp"
        android:layout_marginEnd="23sp"
        android:src="@drawable/soon_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/busanCard"
        android:contentDescription="@string/soon" />


    <LinearLayout
        android:id="@+id/grayCard2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_back_gray_20"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="15dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/h1Converter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/public_sans_bold"
            android:text="@string/converterH"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/h2Converter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/public_sans_extralight"
            android:text="@string/converterP"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="Arrow"
        android:layout_marginRight="22dp"
        app:layout_constraintBottom_toBottomOf="@+id/grayCard2"
        app:layout_constraintEnd_toEndOf="@+id/grayCard2"
        app:layout_constraintTop_toTopOf="@+id/grayCard2"
        app:srcCompat="@drawable/arrow" />


</androidx.constraintlayout.widget.ConstraintLayout>