<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    tools:context=".BusanActivity">

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/public_sans_bold"
        android:text="@string/logo"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="23dp"
        android:contentDescription="@string/backBtn"
        android:src="@drawable/back_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/grayCard1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="23dp"
        android:layout_marginTop="35dp"
        android:paddingTop="15dp"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        android:background="@drawable/round_back_gray_20">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/h1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/public_sans_bold"
                android:text="@string/busan"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="24sp"/>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/korea_icon" />

            <TextView
                android:id="@+id/temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/public_sans_extralight"
                android:text="20°C  now"
                android:gravity="right"
                android:layout_weight="12"
                android:textColor="@color/white"
                android:textSize="20sp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/public_sans_extralight"
            android:text="ЗАПОЛНИТЬ"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/seeMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/public_sans_extralight"
            android:text="@string/seeMore"
            android:textColor="@color/white"
            android:textSize="18sp"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/landmarksCard"
        android:layout_width="169sp"
        android:layout_height="177sp"
        android:layout_marginStart="23sp"
        android:layout_marginTop="20sp"
        android:src="@drawable/landmarks_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grayCard1"
        android:contentDescription="@string/landmarks" />

    <ImageView
        android:id="@+id/shoppingCard"
        android:layout_width="169sp"
        android:layout_height="177sp"
        android:layout_marginEnd="23sp"
        android:layout_marginTop="20sp"
        android:contentDescription="@string/shopping"
        android:src="@drawable/shopping_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grayCard1" />

    <ImageView
        android:id="@+id/hikesCard"
        android:layout_width="169sp"
        android:layout_height="177sp"
        android:layout_marginTop="20sp"
        android:layout_marginStart="23dp"
        android:contentDescription="@string/hikes"
        android:src="@drawable/hikes_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/landmarksCard" />

    <ImageView
        android:id="@+id/foodCard"
        android:layout_width="169sp"
        android:layout_height="177sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="23dp"
        android:contentDescription="@string/food"
        android:src="@drawable/food_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shoppingCard" />

    <LinearLayout
        android:id="@+id/grayCard2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_back_gray_20"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="15dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/h1Notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/public_sans_bold"
            android:text="@string/notesH"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/h2Converter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/public_sans_extralight"
            android:text="@string/notesP"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="Arrow"
        android:layout_marginRight="22dp"
        app:layout_constraintBottom_toBottomOf="@+id/grayCard2"
        app:layout_constraintEnd_toEndOf="@+id/grayCard2"
        app:layout_constraintTop_toTopOf="@+id/grayCard2"
        app:srcCompat="@drawable/arrow" />

</androidx.constraintlayout.widget.ConstraintLayout>
